2007-06-07  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (cautious_PyUnicode_DecodeUTF8): New function to
	safe-guard against supposed UTF-8 strings that are incorrect (bug
	#242962).

2007-05-18  Tim Waugh  <twaugh@redhat.com>

	* examples/cupstree.py: New file.

2007-05-17  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_require): New method.

	* Makefile: Build with VERSION set.

2007-05-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.22.

2007-05-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Allow threads during
	cupsDoRequest.
	(Connection_getDevices): Likewise.

2007-05-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): New optional
	parameters in order to perform maintenance functions.

2007-04-16  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.21.

2007-04-11  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getSubscriptions): New method.
	(Connection_createSubscription): New method.
	(Connection_getNotifications): New method.
	(Connection_renewSubscription): New method.
	(Connection_cancelSubscription): New method.

2007-04-10  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): CUPS_PRINTER_COMMANDS.

2007-04-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.20.

2007-04-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): printer-state-reasons
	is a list.

2007-03-27  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.19.

2007-03-27  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Job state constants.

2007-03-18  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.18.

2007-03-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-state
	attribute.
	(Connection_getJobs): Include job-preserved attribute.
	(Connection_getJobs): Include time-at-creation, time-at-processing
	and time-at-completed attributes.